--- a/BlazorLeaflet/BlazorLeaflet.Samples/Pages/Shapes.razor
+++ b/BlazorLeaflet/BlazorLeaflet.Samples/Pages/Shapes.razor
@@ -46,7 +46,7 @@
             Tooltip = new Tooltip { Content = "Click and drag to move me" }
         };
 
-        _map = new Map(jsRuntime)
+        _map = new Map()
         {
             Center = _markerLatLng,
             Zoom = 4.8f
