--- a/BlazorLeaflet/BlazorLeaflet/LeafletMap.razor
+++ b/BlazorLeaflet/BlazorLeaflet/LeafletMap.razor
@@ -1,18 +1,24 @@
 ﻿@using System.Threading.Tasks
 @using Microsoft.AspNetCore.Components
 @inject IJSRuntime JsRuntime
+@inject LeafletJsInterop LeafletJsInterop
 
 <div id="@Map.Id" style="width: 100%; height: 100%;"></div>
 
 @code {
-    [Parameter] public Map Map { get; set; }
+
+
+
+   [Parameter] public Map Map { get; set; } = null!;
 
 
     protected override async Task OnAfterRenderAsync(bool firstRender)
     {
         if (firstRender)
         {
-            await LeafletInterops.Create(JsRuntime, Map);
+          
+            // await LeafletInterops.Create(JsRuntime, Map);
+           await LeafletJsInterop.Create(Map);
             Map.RaiseOnInitialized();
         }
     }
